# ELK-Log-Parameters-Extraction

./: README.md  mypy.ini  pyproject.toml  pytest.ini
ogre/: __init__.py  data_extractor.py  test_data_extractor.py
